[package]
name = "rattlebeaver"
description = "Manage rolling backups"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ArielHorwitz/rattlebeaver"
license = "Unlicense"
keywords = [
    "rolling",
    "backup",
]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
chronoutil = "0.2.7"
clap = { version = "4.5.35", features = ["derive"] }
flate2 = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
toml = "0.8.20"

[[bin]]
path = "src/main.rs"
name = "rattlebeaver"
